# claude-agent

./: .claude-agent.yaml  .gitignore  AGENTS.md  README.md  claude-progress.txt  feature_list.json  init.sh  pyproject.toml
.claude/: settings.json
.claude/commands/dev/: cleanup.md
.claude/hooks/: stm_validator.sh
.github/workflows/: CLAUDE.md  claude-code-review.yml  claude.yml  github-setup.yml
.simple-task-master/: config.json
docs/: MIGRATION.md
reports/: README.md  drift-mitigation-design.md  drift-mitigation-devops-setup-guide.md  drift-mitigation-github-issues-plan.md
scripts/: github_api.py
scripts/github_tasks/: README.md  drift-mitigation-epics-3-4.yaml  drift-mitigation-issues.yaml  drift-mitigation-labels.yaml  drift-mitigation-milestones.yaml  example.yaml
specs/: claude-progress.txt  feature_list.json
src/claude_agent/: __init__.py  __main__.py  agent.py  architecture.py  cli.py  client.py  config.py  decisions.py  detection.py  doctor.py  errors.py  evaluation.py  logging.py  metrics.py  progress.py  security.py  spec_wizard.py  state.py  structured_errors.py  wizard.py
tests/: test_agent_helpers.py  test_agent_sessions.py  test_agent_state_integration.py  test_architect_session.py  test_architecture.py  test_decisions.py  test_doctor.py  test_errors.py  test_evaluation.py  test_github_api.py  test_hooks.py  test_integration.py  test_logging.py  test_metrics.py  test_progress.py  test_prompt_loader.py  test_security.py  test_skills.py  test_spec_cli.py  test_spec_workflow.py  test_state.py  test_structured_errors.py
(+17 files in other folders)
